--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,5 +1,8 @@
 @tailwind base;
-
 @tailwind components;
+
+.btn-teal {
+    @apply inline-block px-6 py-2 uppercase rounded-full shadow-lg text-sm text-white font-semibold;
+}
 
 @tailwind utilities;
