--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -4,5 +4,6 @@
 .btn-teal {
     @apply inline-block px-6 py-2 uppercase rounded-full shadow-lg text-sm text-white font-semibold;
 }
+.test-tailwind { @apply text-pink-500 font-bold text-xl bg-gray-700;}
 
 @tailwind utilities;
