--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -573,6 +573,33 @@ video {
   }
 }
 
+@primary-color: #01A3A4;
+
+@link-color: #0ABDE3;
+
+@success-color: #52c41a;
+
+@warning-color: #faad14;
+
+@error-color: #c00606;
+
+@font-size-base: 14px;
+
+@heading-color: rgba(0, 0, 0, 0.85);
+
+@text-color: rgba(0, 0, 0, 0.65);
+
+@text-color-secondary: rgba(0, 0, 0, 0.45);
+
+@disabled-color: rgba(0, 0, 0, 0.25);
+
+@border-radius-base: 2px;
+
+@border-color-base: #d9d9d9;
+
+@box-shadow-base: 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 6px 16px 0 rgba(0, 0, 0, 0.08),
+  0 9px 28px 8px rgba(0, 0, 0, 0.05);
+
 .btn-teal {
   border-radius: 9999px;
   display: inline-block;
@@ -588,9 +615,6 @@ video {
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity));
   text-transform: uppercase;
-}
-
-.test-tailwind { --tw-bg-opacity: 1; background-color: rgba(55, 65, 81, var(--tw-bg-opacity)); font-weight: 700; font-size: 1.25rem; line-height: 1.75rem; --tw-text-opacity: 1; color: rgba(236, 72, 153, var(--tw-text-opacity));
 }
 
 .space-y-0 > :not([hidden]) ~ :not([hidden]) {
