--- a/src/components/TasksComp/style.module.css
+++ b/src/components/TasksComp/style.module.css
@@ -1,44 +1,55 @@
-.TaskBoxCenter {
-    width: 70%;
-    float: left;
-    border: 2px solid #000;
-    background: #1757ee;
-    position: fixed;
-
-}
-.TaskFixedButton {
-margin: 2rem;
-padding: 2rem;
-
-}
-
-.TaskBoxCenter2 {
+.TaskBoxCenterTop {
+    width:100%;
+    height: 3rem;
     border: 2px solid #000;
     background: #f3f600;
 }
 
+
+.TaskBoxCenter {
+    width: 100%;
+    border: 2px solid #000;
+    /* background: #1757ee; */
+}
+.TaskFixedButton {
+margin: 0;
+padding: 0;
+
+}
+
+
+
 .TaskInfo1 {
     display: inline-block;
-    width: 10rem;
-    height: 4rem;  
+    margin: 0;
+    padding: 0;
+    width: 16rem;
+    height: 2.5rem;  
     background: #ff9f43;
     border-radius: 10px;
 }
 .TaskInfo1 label {
     font-size: 16px;
     color: #fff;
-    padding: 1rem;
 }
 
 .TaskInfo2 {
     display: inline-block;
-    width: 10rem;
-    height: 4rem;
+    width: 16rem;
+    height: 2.5rem;
     background: #f368e0;
     border-radius: 10px;
 }
 .TaskInfo2 label {
     font-size: 16px;
     color: #fff;
-    padding: 1rem;
+}
+.TaskQuestionHeader {
+    display: flex;
+    color: #173b5d;
+    font-size: 16px;
+    font-weight: lighter;
+    background:#fae6b1;
+    height: 3rem;
+    
 }
