--- a/src/pages/TaskBankPage/style.module.css
+++ b/src/pages/TaskBankPage/style.module.css
@@ -1,8 +1,8 @@
 .SelectFixed {
     position: fixed;
     display: inline-block;
-   
-    margin-top: 0;
+    padding: 0.25rem 0 0.5rem 0;
+    color: #01A3A4;
 }
 .taskbank {
   margin-top: 2px;
@@ -10,8 +10,7 @@
   height: 75vh;
 }
 .taskTree {
-    border: 1px solid #000;
-    background: #1757ee;
+    /* background: #1757ee; */
     height: 75vh;
 }
 
@@ -25,21 +24,80 @@
 }
 .button {
     margin: 0.25rem;
+    border-radius: 0.5rem;
+    background: #01A3A4;
+    border: none;
+    color: #fff;
+    width: 154px;
+    text-transform: uppercase;
 }
 
 .TaskFixedIcons {
-    color: #00d2d3;
+    color: #01A3A4;
     font-size: 1.25rem;
-    padding: 0.25rem;
-    cursor:pointer;
+    padding: 0 0.75rem 0 0.75rem ;
+    cursor: pointer;
 }
 
 .TaskRightFixedIcons {
     position: fixed;
-    color: #00d2d3;
-    font-size: 2rem;
-    padding: 0.5rem 3rem 0.5rem 3rem;
+    color: #01A3A4;
+    font-size: 1.5rem;
+    padding: 5rem 0.25rem 0.5rem 0.25rem;
     cursor: pointer;
     /* margin: 0 0 3rem 0; */
    
+}
+.TaskListIcons {
+    color: #ff9f43;
+    font-size: 1.25rem;
+    padding: 0 0.5rem 0.5rem 0.5rem;
+    margin: 0;
+    cursor:pointer;
+}
+
+
+
+.TaskInfo1 {  
+    display: inline-block; 
+    margin: 5px 5px 5px 5px;
+    padding: 0;
+    width: 14rem;
+    height: 2rem;  
+    background: #ff9f43;
+    border-radius: 10px;
+}
+.TaskInfo1 label {
+    padding: 15px;
+    font-size: 15px;
+    color: #fff;
+}
+
+.TaskInfo2 {
+    display: inline-block;
+    width: 14rem;
+    height: 2rem;
+    background: #f368e0;
+    border-radius: 10px;
+}
+.TaskInfo2 label {
+    font-size: 16px;
+    color: #fff;
+}
+.TaskSelectItem {
+    padding: 2px 3px 3px 15px;
+}
+.TaskInfoButton {
+    display: inline;
+    margin: 0 0.25rem 0 0.5rem;
+    color: #01A3A4;
+       
+}
+.TaskInfoButton:hover { 
+    display: inline;
+    margin: 0 0.25rem 0 0.5rem;
+    color: #01A3A4;
+    border-color: #29d4aa; 
+    --antd-wave-shadow-color: #29d4aa;
+    --scroll-bar:0;  
 }
