--- a/src/components/TasksComp/style.module.css
+++ b/src/components/TasksComp/style.module.css
@@ -1,12 +1,11 @@
 .TaskBoxCenterTop {
   width: 100%;
   height: 3rem;
- 
-
 }
 
 .TaskBoxCenter {
   width: 100%;
+  background: #fff;
 
 }
 .TaskFixedButton {
@@ -41,12 +40,17 @@
 }
 .TaskQuestionHeader {
   display: flex;
-  color: #fff;
+  margin-top: 4px;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  color: #173b5d;
   font-size: 16px;
   font-weight: lighter;
-  box-shadow: 1px 1px 6px rgb(0 0 0 / 50%);
-  margin-bottom: 1rem;
-  background: rgb(64, 206, 182);
+  box-shadow: -3px 2px 6px rgb(0 0 0 / 50%);
+  /* background: #fff; */
+  border-radius: 1rem;
+
+  /* background: rgb(64, 206, 182); */
   /* background: linear-gradient(
     90deg,
     rgba(1, 163, 164, 1) 0%,
@@ -56,18 +60,19 @@
     rgba(28, 222, 227, 1) 100%,
     rgba(5, 172, 173, 1) 100%,
     rgba(1, 163, 164, 1) 100%
-  ); */
-  height: 2rem;
+  );  */
+  height: 2.75rem;
   /* border: 1px solid #ddd; */
-  padding: 4px 0 0 10px;
+  padding: 12px 12px 12px 15px;
 }
 
 .TaskQuestionHeaderTitle {
-  color: #fff;
+  color: #363838;
   font-size: 16px;
   font-weight: bolder;
   margin-top: -2px;
   padding: 0 0 0 15px;
+  /* border-bottom: 1px rgb(41 212 170 / 30%) solid; */
 }
 
 .TaskQuestionHeader2 {
@@ -77,55 +82,37 @@
   font-weight: lighter;
   background: rgb(1, 163, 164);
 
-  height: 2rem;
+  height: 3rem;
 }
 .TaskListIcons {
-  color: #fff;
+  color: #173b5d;
   font-size: 1.75rem;
   padding: 0.25rem;
 }
 
 .TaskQuestionHeader:hover {
-    box-shadow: 1px 1px 6px rgb(41 212 170 / 100%);
-    transition: all .3s;
-    cursor: pointer;
-  }
+  box-shadow: -1px 3px 6px rgb(41 212 170 / 70%);
+  transition: all 0.3s;
+  cursor: pointer;
+}
 
-.TaskQuestionsList {
-  padding-left: 15px;
-  font-weight: bolder;
- font-size: 16px;
- color: #01a3a4;
+.TaskQuestionsList { 
+  display: block;
+  width: 100%;
+  padding: 1rem 1rem 1rem 2.5rem;
+  text-align: justify;
+  font-weight: 500;
+  font-size: 15px;
+  color: #40ceb6;
 }
 .TaskAnswerList {
-  margin: 1rem 1rem 1rem 2rem;
+  margin: 1rem 2rem 1.5rem 3rem;
   padding: 0;
   color: #01a3a4;
-  line-height: 10px;
-
 }
 
 .TaskAnswerRadio {
-  color: #01a3a4; 
   display: block;
-   height: 2rem;
-  lineHeight: 2rem;
-  /* height: 2rem; */
-
+  height: 2rem;
+  lineheight: 2rem;
 }
-.radioStyle {
-  line-height: 10px;
-}
-.ant-radio-wrapper, .ant-radio {
-  line-height: 10px;
-  height: 10px;
-}
-
-
-
-
-
-
-
-
-
